--- a/form-registration.html
+++ b/form-registration.html
@@ -11,19 +11,21 @@
   <body>
     <!-- main-header -->
     <header class="main-header">
-      <div class="row">
-        <div class="col-8">
-          <img class="iso" src="images/wander-iso.png" alt="wander isotype"/>
-          <img class="logo" src="images/wander-logo.png" alt="wander logotype"/>
-        </div>
-        <div class="col-2">
-          <a href="#" class="register-link">Registrarme</a>
-        </div>
-        <div class="col-2">
-          <a href="#" class="login-button">Inicio</a>
-        </div>
-      </div>
-    </header>
+			<div class="container-fluid">
+			<div class="row">
+				<div class="col-8">
+					<img class="iso" src="images/wander-iso.png" alt="wander isotype"/>
+					<a href="wander_index.html"><img class="logo" src="images/wander-logo.png" alt="wander logotype"/></a>
+				</div>
+				<div class="col-2">
+					<a href="form-registration.html" class="register-link">Registrarme</a>
+				</div>
+				<div class="col-2">
+					<a href="form-login.html" class="login-button">Inicio</a>
+				</div>
+			</div>
+			</div>
+		</header>
     <!-- /main-header -->
 
 		<!-- formulario -->
@@ -94,55 +96,56 @@
           <span class="icon-login"></span>
           <input class="boton" type="submit" name="" value="Registrarme">
         </p>
-
       </form>
       </div>
       </div>
 
     </div>
-    <!-- formulario -->}
+    <!-- formulario -->
 
     <!-- main footer -->
-		<footer class="main-footer">
-			<img src="images/skyline-banner.png" alt="skyline banner">
-			<div class="row">
-				<div class="col-12 col-md-4">
-					<ul class="footer-list">
-						<li><a href="#">Quiénes somos</a></li>
-						<li><a href="#">Contacto</a></li>
-						<li><a href="#">Trabaje con nosotros</a></li>
-						<br>
-						<br>
-					</ul>
+    <footer class="main-footer">
+		<img src="images/skyline-banner.png" alt="skyline banner">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-12 col-md-4">
+						<ul class="footer-list">
+							<li><a href="#">Quiénes somos</a></li>
+							<li><a href="#">Contacto</a></li>
+							<li><a href="#">Trabaje con nosotros</a></li>
+							<br>
+							<br>
+						</ul>
+					</div>
+					<div class="col-12 col-md-4">
+						<ul class="footer-list">
+							<li><a href="form-login.html">Inicio</a></li>
+							<li><a href="profile.html">Mi perfil</a></li>
+							<li><a href="faq_wander.html">Preguntas frecuentes</a></li>
+							<br>
+							<br>
+						</ul>
+					</div>
+					<div class="col-12 col-md-4">
+						<ul class="footer-list">
+							<li><a href="#">Eventos</a></li>
+							<li><a href="#">Destinos</a></li>
+							<br>
+							<br>
+							<br>
+						</ul>
+					</div>
 				</div>
-				<div class="col-12 col-md-4">
-					<ul class="footer-list">
-						<li><a href="#">Inicio</a></li>
-						<li><a href="#">Mi perfil</a></li>
-						<li><a href="#">Preguntas frecuentes</a></li>
-						<br>
-						<br>
-					</ul>
-				</div>
-				<div class="col-12 col-md-4">
-					<ul class="footer-list">
-						<li><a href="#">Eventos</a></li>
-						<li><a href="#">Destinos</a></li>
-						<br>
-						<br>
-						<br>
-					</ul>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-8 copyright">
-					<img class="iso" src="images/wander-iso.png" alt="wander isotype"/>
-					<p>© derechos reservados</p>
-				</div>
-				<div class="col-4 social-links">
-					<a href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a>
-					<a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
-					<a href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>
+				<div class="row">
+					<div class="col-8 copyright">
+						<img class="iso" src="images/wander-iso.png" alt="wander isotype"/>
+						<p>© derechos reservados</p>
+					</div>
+					<div class="col-4 social-links">
+						<a href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a>
+						<a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+						<a href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>
+					</div>
 				</div>
 			</div>
 		</footer>
