footer y header y + en faq

--- a/faq_wander.html
+++ b/faq_wander.html
@@ -10,29 +10,33 @@
 	<body>
 		<!-- main-header -->
 		<header class="main-header">
+			<div class="container-fluid">
 			<div class="row">
 				<div class="col-8">
 					<img class="iso" src="images/wander-iso.png" alt="wander isotype"/>
-					<img class="logo" src="images/wander-logo.png" alt="wander logotype"/>
+					<a href="wander_index.html"><img class="logo" src="images/wander-logo.png" alt="wander logotype"/></a>
 				</div>
 				<div class="col-2">
-					<a href="registro_login.html" class="register-link">Registrarme</a>
+					<a href="form-registration.html" class="register-link">Registrarme</a>
 				</div>
 				<div class="col-2">
-					<a href="wander_index.html" class="login-button">Inicio</a>
+					<a href="form-login.html" class="login-button">Inicio</a>
 				</div>
+			</div>
 			</div>
 		</header>
 		<!-- /main-header -->
 
 		<!-- /accordion -->
-		<div class="container">
+		<div class="container-fluid">
+			<div class="row">
+			<div class="col-12 col-md-12">
+			<h1>Preguntas Frecuentes</h1>
+		</div>
+		</div>
 			<div class="row">
 				<div class="col-12 col-md-4">
 					<ul class="accordion-list">
-						<br>
-						<br>
-						<h1>Preguntas Frecuentes</h1>
 						<hr>
 						<hr>
 						<br>
@@ -46,7 +50,7 @@
 						<li> <a href="#">Eventos</a></li>
 						<li><a href="#">Privacidad</a></li>
 						<li><a href="#">Perfil</a></li>
-						<li><a href="#">Amigos</a></li>
+						<li><a href="#">Gestion de Cuenta</a></li>
 						<li><a href="#">Comunidad y +</a></li>
 						<hr>
 						<hr>
@@ -59,6 +63,9 @@
 
 			<div class="col-12 col-md-8">
     <div class="accordion" id="accordion">
+			<br>
+			<br>
+			<br>
       <div class="card">
         <div class="card-header" id="headingOne">
           <h2 class="mb-0">
@@ -97,7 +104,7 @@
           </h2>
         </div>
         <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-          <div class="card-body">
+          <div class="card-body-three">
             Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
           </div>
         </div>
@@ -111,7 +118,7 @@
           </h2>
         </div>
         <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
-          <div class="card-body">
+          <div class="card-body-four">
             Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
           </div>
         </div>
@@ -125,7 +132,7 @@
           </h2>
         </div>
         <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
-          <div class="card-body">
+          <div class="card-body-five">
             Usuario y contraseña.... Usuario y contraseña.... Usuario y contraseña.... Usuario y contraseña.... Usuario y contraseña.... Usuario y contraseña.... Usuario y contraseña.... Usuario y contraseña.... Usuario y contraseña.... Usuario y contraseña....
           </div>
         </div>
@@ -154,7 +161,7 @@
         </div>
         <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accordion">
           <div class="card-body">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </div>
         </div>
       </div>
@@ -182,7 +189,7 @@
         </div>
         <div id="collapseNine" class="collapse" aria-labelledby="headingNine" data-parent="#accordion">
           <div class="card-body">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Lorem ipsum dolor sit amet. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </div>
         </div>
       </div>
@@ -190,51 +197,54 @@
 		</div>
 	</div>
 </div>
+</div>
 
 		<!-- /accordion -->
 
 		<!-- main footer -->
 
 		<footer class="main-footer">
-			<img src="images/skyline-banner.png" alt="skyline banner">
-			<div class="row">
-				<div class="col-12 col-md-4">
-					<ul class="footer-list">
-						<li><a href="#">Quiénes somos</a></li>
-						<li><a href="#">Contacto</a></li>
-						<li><a href="#">Trabaje con nosotros</a></li>
-						<br>
-						<br>
-					</ul>
+		<img src="images/skyline-banner.png" alt="skyline banner">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-12 col-md-4">
+						<ul class="footer-list">
+							<li><a href="#">Quiénes somos</a></li>
+							<li><a href="#">Contacto</a></li>
+							<li><a href="#">Trabaje con nosotros</a></li>
+							<br>
+							<br>
+						</ul>
+					</div>
+					<div class="col-12 col-md-4">
+						<ul class="footer-list">
+							<li><a href="form-login.html">Inicio</a></li>
+							<li><a href="profile.html">Mi perfil</a></li>
+							<li><a href="faq_wander.html">Preguntas frecuentes</a></li>
+							<br>
+							<br>
+						</ul>
+					</div>
+					<div class="col-12 col-md-4">
+						<ul class="footer-list">
+							<li><a href="#">Eventos</a></li>
+							<li><a href="#">Destinos</a></li>
+							<br>
+							<br>
+							<br>
+						</ul>
+					</div>
 				</div>
-				<div class="col-12 col-md-4">
-					<ul class="footer-list">
-						<li><a href="wander_index.html">Inicio</a></li>
-						<li><a href="#">Mi perfil</a></li>
-						<li><a href="faq_wander.html">Preguntas frecuentes</a></li>
-						<br>
-						<br>
-					</ul>
-				</div>
-				<div class="col-12 col-md-4">
-					<ul class="footer-list">
-						<li><a href="#">Eventos</a></li>
-						<li><a href="#">Destinos</a></li>
-						<br>
-						<br>
-						<br>
-					</ul>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-8 copyright">
-					<img class="iso" src="images/wander-iso.png" alt="wander isotype"/>
-					<p>© derechos reservados</p>
-				</div>
-				<div class="col-4 social-links">
-					<a href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a>
-					<a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
-					<a href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>
+				<div class="row">
+					<div class="col-8 copyright">
+						<img class="iso" src="images/wander-iso.png" alt="wander isotype"/>
+						<p>© derechos reservados</p>
+					</div>
+					<div class="col-4 social-links">
+						<a href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a>
+						<a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+						<a href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>
+					</div>
 				</div>
 			</div>
 		</footer>
