faq modificaciones enlas categorias

--- a/faq_wander.html
+++ b/faq_wander.html
@@ -47,10 +47,10 @@
           	<hr>
 						<hr>
 					  <br>
-						<li> <a href="#">Eventos</a></li>
-						<li><a href="#">Privacidad</a></li>
+						<li> <a href="#">Hacerse Miembro</a></li>
 						<li><a href="#">Perfil</a></li>
 						<li><a href="#">Gestion de Cuenta</a></li>
+						<li><a href="#">Privacidad</a></li>
 						<li><a href="#">Comunidad y +</a></li>
 						<hr>
 						<hr>
@@ -63,14 +63,11 @@
 
 			<div class="col-12 col-md-8">
     <div class="accordion" id="accordion">
-			<br>
-			<br>
-			<br>
-      <div class="card">
+			  <div class="card">
         <div class="card-header" id="headingOne">
           <h2 class="mb-0">
             <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              ¿Puedo ver el contenido de eventos y recomendados sin ser miembro?
+              Hacerse Miembro - ¿Es gratis Wander?
             </button>
           </h2>
         </div>
@@ -85,7 +82,7 @@
         <div class="card-header" id="headingTwo">
           <h2 class="mb-0">
             <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              ¿Como me hago miembro de la comunidad?
+              Perfil - ¿ Como edito mis datos de la cuenta?
             </button>
           </h2>
         </div>
@@ -99,7 +96,7 @@
         <div class="card-header" id="headingThree">
           <h2 class="mb-0">
             <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-            ¿Es Gratis Wander?
+            Perfil - ¿ Como elimino la cuenta?
             </button>
           </h2>
         </div>
@@ -113,7 +110,7 @@
         <div class="card-header" id="headingFour">
           <h2 class="mb-0">
             <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-              Gestion de Cuenta - ¿Como creo mi Usuario y Contraseña?
+            Gestion de Cuenta - ¿Como creo mi Usuario y Contraseña?
             </button>
           </h2>
         </div>
@@ -127,7 +124,7 @@
         <div class="card-header" id="headingFive">
           <h2 class="mb-0">
             <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-              Gestion de Cuenta - ¿Como recupero mi Usuario y Contraseña?
+            Gestion de Cuenta - ¿Como recupero mi Usuario y Contraseña?
             </button>
           </h2>
         </div>
@@ -141,7 +138,7 @@
         <div class="card-header" id="headingSix">
           <h2 class="mb-0">
             <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-              Comunidad - ¿como envio una solicitud de amistad?
+              Privacidad - ¿como envio una solicitud de amistad?
             </button>
           </h2>
         </div>
@@ -155,7 +152,7 @@
         <div class="card-header" id="headingSeven">
           <h2 class="mb-0">
             <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-            Comunidad - ¿Como Bloqueo y Desbloqueo Amigos?
+            Privacidad - ¿Como Bloqueo y Desbloqueo Amigos?
             </button>
           </h2>
         </div>
