--- a/contacts.html
+++ b/contacts.html
@@ -4,8 +4,9 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Wander - Conectando viajeros en el mundo</title>
-		<link rel="stylesheet" href="css/styles.css">
+		<link rel="stylesheet" href="css/styles-contacts.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="icons/style-icons.css">
 	</head>
 	<body>
 		<!-- main-header -->
@@ -27,29 +28,30 @@
 		</header>
 		<!-- /main-header -->
 
-		<!-- search bar -->
-		<section class="search-bar">
-			<div class="container-fluid">
-				<h3>Contactos</h3>
-				<form class="search-form" action="#">
-					<div class="row">
-						<div class="col-12 col-md-3">
-							<label for="destination">Buscar contactos:</label>
-							<br>
-							<input type="text" id="buscador-contactos" placeholder="ingresa un contacto" name="buscador-contactos">
-						</div>
-					</div>
+		<!-- search contacts -->
+		<section class="search-contacts">
+			<div class="contacts">
+				<h1>Contactos</h1>
+			</div>
+			<div class="form-search-contacts">
+				<form class="search-contacts" action="#">
+					<label for="contacts">Buscar contactos:</label>
+					<br>
+					<input type="text" id="buscador-contactos" placeholder="Ingresa un contacto" name="buscador-contactos">
+					<span class="icon-magnifying-glass"></span>
 				</form>
 			</div>
 		</section>
-		<!-- /search bar -->
+		<br>
+		<!-- /search contacts -->
 
 		<!-- /contact list -->
 		<div class="row">
-			<div class="col-3">
+			<div class="col-1">
 				<div class="imagen-perfil">
 					<img src="images/foto-perfil.jpg" alt="">
 				</div>
+			</div>
 			<div class="col-3">
 				<div class="nombre-contacto">
 					Contacto 1
@@ -58,8 +60,40 @@
 			<div class="col-3">
 				<button class="search-button" type="submit"><i class="fas fa-search"></i> Mensaje</button>
 			</div>
+		</div>
+		<br>
+		<div class="row">
+			<div class="col-1">
+				<div class="imagen-perfil">
+					<img src="images/foto-perfil.jpg" alt="">
+				</div>
+			</div>
+			<div class="col-3">
+				<div class="nombre-contacto">
+					Contacto 2
+				</div>
+			</div>
+			<div class="col-3">
+				<button class="search-button" type="submit"><i class="fas fa-search"></i> Mensaje</button>
 			</div>
 		</div>
+		<br>
+		<div class="row">
+			<div class="col-1">
+				<div class="imagen-perfil">
+					<img src="images/foto-perfil.jpg" alt="">
+				</div>
+			</div>
+			<div class="col-3">
+				<div class="nombre-contacto">
+					Contacto 3
+				</div>
+			</div>
+			<div class="col-3">
+				<button class="search-button" type="submit"><i class="fas fa-search"></i> Mensaje</button>
+			</div>
+		</div>
+	<!-- /contact list -->
 
 
 
