--- a/form-registration.html
+++ b/form-registration.html
@@ -94,7 +94,7 @@
         </p>
         <p>
           <span class="icon-login"></span>
-          <input class="boton" type="submit" name="" value="Registrarme">
+          <input class="search-button" type="submit" name="" value="Registrarme">
         </p>
       </form>
       </div>
