--- a/wander_index.html
+++ b/wander_index.html
@@ -20,10 +20,10 @@
 					<a href="form-registration.html" class="register-link">Registrarme</a>
 				</div>
 				<div class="col-2">
-					<a href="form-login.html" class="login-button">Inicio</a>
+					<a href="form-login.html" class="login-button">Iniciar sesion</a>
 				</div>
 			</div>
-			</div>
+			</div>	
 		</header>
 		<!-- /main-header -->
 
@@ -74,7 +74,7 @@
 					  </div>
 					  <div class="col-12 col-md-3">
 					  <br>
-					  <button class="search-button" type="submit"><i class="fas fa-search"></i> Buscar</button>
+					  <button class="submit-button" type="submit"><i class="fas fa-search"></i> Buscar</button>
 					  </div>
 					</div>
 				</form>
